--- a/qtfuzzylite/ui/Viewer.ui
+++ b/qtfuzzylite/ui/Viewer.ui
@@ -37,6 +37,13 @@
       <number>0</number>
      </property>
      <item>
+      <widget class="QLabel" name="lbl_name">
+       <property name="text">
+        <string>name</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QHBoxLayout" name="horizontalLayout_7">
        <property name="bottomMargin">
         <number>0</number>
