--- a/qtfuzzylite/ui/Viewer.ui
+++ b/qtfuzzylite/ui/Viewer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>274</width>
-    <height>269</height>
+    <height>284</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -198,13 +198,13 @@ border-radius: 8px;
 </string>
        </property>
        <property name="maximum">
-        <number>999</number>
+        <number>1000</number>
        </property>
        <property name="singleStep">
         <number>10</number>
        </property>
        <property name="pageStep">
-        <number>50</number>
+        <number>20</number>
        </property>
        <property name="value">
         <number>0</number>
@@ -247,6 +247,39 @@ border-radius: 8px;
        </property>
        <property name="text">
         <string/>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::RichText</enum>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="lbl_fuzzy_out">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Ignored" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::RichText</enum>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
